@@ -5,7 +5,7 @@
   <property name="app2" value="jfdnssvc"/>
   <property name="apptype2" value="s"/>
   <property name="home" location="../.."/>
-  <property name="version" value="0.4"/>
+  <property name="version" value="0.5"/>
 
   <import file="../../base.xml"/>
 
