@@ -1,5 +1,5 @@
 Package: jfdns
-Version: 0.4
+Version: 0.5
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
