@@ -1,5 +1,5 @@
 Package: jfproxy
-Version: 0.5
+Version: 0.6
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
